contrib/kubernetes/strapi/strapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  labels:
    name: strapi 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: bketelsen/content:10
          imagePullPolicy: Always
          ports:
            - name: strapi-port
              containerPort: 1337
              protocol: TCP
