contrib/kubernetes/strapi/strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi
spec:
  type: ClusterIP
  selector:
    app: strapi
  ports:
  - name: strapi-port
    protocol: TCP
    port: 1337
    targetPort: strapi-port
