contrib/kubernetes/strapi/strapi-ingress-temp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: strapi-temp-ingress
spec:
  rules:
  - host: content.gophercon.com
    http:
      paths:
      - backend:
          serviceName: strapi
          servicePort: strapi-port
